# sessionbat-sdk

./: .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ruff.yml  tests.yml
examples/: failure_model_error.py  failure_retrieval_miss.py  failure_tool_loop.py  manual_trace.py
src/sessionbat/: __init__.py  client.py  langchain.py  models.py  transports.py
tests/: __init__.py  test_client.py  test_langchain.py  test_transport.py
tests/integration/: __init__.py  test_langchain.py
