[project]
name = "sessionbat"
version = "0.1.0"
description = "Manual tracing primitives for AI sessions."
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = true

[tool.hatch.build.targets.wheel]
packages = ["src/sessionbat"]
