[project]
name = "sessionbat"
version = "0.1.0"
description = "Manual tracing primitives for AI sessions."
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = true

[tool.hatch.build.targets.wheel]
packages = ["src/sessionbat"]

[dependency-groups]
dev = [
    "langchain>=1.2.18",
    "pytest>=9.0.3",
    "ruff>=0.15.12",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
filterwarnings = [
    "ignore:'asyncio\\.iscoroutinefunction' is deprecated:DeprecationWarning:langchain_core\\.runnables\\.utils",
]
