[project]
name = "sessionbat"
version = "0.1.0"
description = "Python SDK for recording and monitoring AI session activity."
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.11"
authors = [{ name = "Søren Blond Daugaard" }]
maintainers = [{ name = "Søren Blond Daugaard" }]
keywords = [
    "ai",
    "agents",
    "llm",
    "observability",
    "monitoring",
    "tracing",
    "langchain",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Monitoring",
    "Typing :: Typed",
]
dependencies = []

[project.optional-dependencies]
langchain = ["langchain>=1.2.18"]

[project.urls]
Homepage = "https://github.com/daugaard/sessionbat-sdk"
Repository = "https://github.com/daugaard/sessionbat-sdk"
Issues = "https://github.com/daugaard/sessionbat-sdk/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = true

[tool.hatch.build.targets.wheel]
packages = ["src/sessionbat"]

[tool.hatch.build.targets.sdist]
include = [
    "LICENSE",
    "README.md",
    "pyproject.toml",
    "src/sessionbat",
    "tests",
]

[dependency-groups]
dev = [
    "langchain>=1.2.18",
    "pytest>=9.0.3",
    "ruff>=0.15.12",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
filterwarnings = [
    "ignore:'asyncio\\.iscoroutinefunction' is deprecated:DeprecationWarning:langchain_core\\.runnables\\.utils",
]
